samples/_failures_safe/1761488505_67d54b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5079672b.c: In function ‘main’:
./samples/SAFE/__tmp_5079672b.c:146:5: error: expected expression at end of input
  146 |     if (compressed_size ==
      |     ^~
./samples/SAFE/__tmp_5079672b.c:146:5: error: expected declaration or statement at end of input
